[tool.poetry]
name = "cacheproxy"
version = "0.1.0"
description = "Simple Python cache/caching proxy for Web development and something else"
homepage = "https://github.com/nolze/cacheproxy"
repository = "https://github.com/nolze/cacheproxy"
authors = ["nolze <nolze@int3.net>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "cacheproxy" }]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = { extras = ["speedups"], version = "^3.8.3" }
aiohttp-client-cache = "^0.7.3"
aiosqlite = "^0.17.0"
aiofiles = "^22.1.0"

[tool.poetry.scripts]
cacheproxy = "cacheproxy.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-aiohttp = "^1.0.4"
pytest-asyncio = "^0.20.1"
pytest-httpserver = "^1.0.6"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
